[gd_scene load_steps=2 format=3 uid="uid://caxbplf764pxw"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_3yiyy"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3yiyy")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="EnergyBar" type="ProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 28.0
offset_bottom = 55.0
grow_horizontal = 2

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 63.0
offset_right = 0.5
offset_bottom = 86.0
grow_horizontal = 2
